added postGres and other plugins metrics

--- a/resources/collectd/collectd.conf
+++ b/resources/collectd/collectd.conf
@@ -1,11 +1,24 @@
 LoadPlugin logfile
 LoadPlugin curl
 LoadPlugin network
-
+LoadPlugin postgresql
+LoadPlugin processes
 <Plugin logfile>
   LogLevel "debug"
   File "/var/log/collectd.log"
   Timestamp true
+</Plugin>
+<Plugin "processes">
+	CollectFileDescriptor true
+  	CollectContextSwitch true
+	ProcessMatch pg_writer "postgres:.writer.process"
+	ProcessMatch pg_wal_writer "postgres:.wal.writer.process"
+	ProcessMatch pg_autovacuum "postgres:.*autovacuum"
+	ProcessMatch pg_stats_collector "postgres:.stats.collector.process"
+	# database connections by ’user’
+	ProcessMatch pg_user_mail "postgres:.user"
+	# database connections to database ’mail’
+	ProcessMatch pg_db_mail "postgres:.[A-Za-z0-9]+.mail"
 </Plugin>
 
 <Plugin curl>
@@ -15,6 +28,42 @@ LoadPlugin network
         MeasureResponseCode true
     </Page>
 </Plugin>
+
+<Plugin postgresql>
+  <Query custom_deadlocks>
+      Statement "SELECT deadlocks as num_deadlocks \
+          FROM pg_stat_database \
+          WHERE datname = $1;"
+
+      Param database
+
+      <Result>
+          Type "pg_xact"
+          InstancePrefix "num_deadlocks"
+          ValuesFrom "num_deadlocks"
+      </Result>
+  </Query>
+
+  <Database postgres>
+    Host "localhost"
+    User "root"
+    Password ""
+    Query custom_deadlocks
+    Query backends
+    Query transactions
+    Query queries
+    Query queries_by_table
+    Query query_plans
+    Query table_states
+    Query query_plans_by_table
+    Query table_states_by_table
+    Query disk_io
+    Query disk_io_by_table
+    Query disk_usage
+  </Database>
+</Plugin>
+
+
 
 <Plugin network>
     <Server "127.0.0.1" "25826">
