Updated Collectd with more comments

--- a/resources/collectd/collectd.conf
+++ b/resources/collectd/collectd.conf
@@ -1,3 +1,5 @@
+# This includes monitoring metrics for postgres DB and related processes
+
 LoadPlugin logfile
 LoadPlugin curl
 LoadPlugin network
@@ -8,6 +10,8 @@ LoadPlugin processes
   File "/var/log/collectd.log"
   Timestamp true
 </Plugin>
+
+# For monitoring postgres processes 
 <Plugin "processes">
 	CollectFileDescriptor true
   	CollectContextSwitch true
@@ -21,6 +25,7 @@ LoadPlugin processes
 	ProcessMatch pg_db_mail "postgres:.[A-Za-z0-9]+.mail"
 </Plugin>
 
+# For monitoring the application processes 
 <Plugin curl>
     <Page "status">
         URL "http://localhost:8080/status";
@@ -29,6 +34,7 @@ LoadPlugin processes
     </Page>
 </Plugin>
 
+# Comment the following section if PostGresDB is NOT running on the Machine.
 <Plugin postgresql>
   <Query custom_deadlocks>
       Statement "SELECT deadlocks as num_deadlocks \
@@ -43,6 +49,12 @@ LoadPlugin processes
           ValuesFrom "num_deadlocks"
       </Result>
   </Query>
+
+# comment the following section if PostGresDB is Not running. This assumes the postgres db is running on TCP port. Please 
+# make sure the User name matches the OS User name that runs the collectD process. The Same OS user name must be added in the 
+# the postgres USER table. The below configuration shows no password for the user "root" since the in the ./var/lib/pgsql/data/pg_hba.conf
+# has the incoming connections from local IP address trusted requiring no user authentication to connect to the DB. This needs to change
+# in prod env for making the connections secure.
 
   <Database postgres>
     Host "localhost"
@@ -64,6 +76,7 @@ LoadPlugin processes
 </Plugin>
 
 
+# This is the UDP port of CloudWatch Agent that listens in for collectd metrics.
 
 <Plugin network>
     <Server "127.0.0.1" "25826">
